Updated openapi
